Added registration screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="enter_password">Введите пароль</string>
     <string name="enter">Войти</string>
     <string name="registration">Регистрация</string>
+    <string name="save">Сохранить</string>
+    <string name="repeat_password">Повторите пароль</string>
 </resources>
